<?xml version="1.0"?>
<package>
  <name>fkie_iop_client_digital_resource</name>
  <version>1.0.0</version>
  <description>The client service for IOP DigitalResourceDiscovery service, which implements also the Slave interface</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://gitlab.fkie.fraunhofer.de/jaus/iop_sensing_clients.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fkie_iop_digital_resource_discovery</build_depend>
  <build_depend>fkie_iop_msgs</build_depend>
  <build_depend>fkie_iop_ocu_slavelib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>fkie_iop_component</run_depend>
  <run_depend>fkie_iop_digital_resource_discovery</run_depend>
  <run_depend>fkie_iop_msgs</run_depend>
  <run_depend>fkie_iop_ocu_slavelib</run_depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
 
</package>