<?xml version="1.0"?>
<package>
  <name>fkie_iop_health_monitor</name>
  <version>1.3.0</version>
  <description>The bridge library of IOP HealthMonitor service.
    This service can be included into other components.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fkie_iop_accesscontrol</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>fkie_iop_accesscontrol</run_depend>
  <run_depend>fkie_iop_component</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>