<?xml version="1.0"?>
<package>
  <name>fkie_iop_unsolicited_heartbeat</name>
  <version>0.1.0</version>
  <description>Automatically generate periodic Report Heartbeat Pulse messages.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fkie_iop_liveness</build_depend>
  <run_depend>fkie_iop_liveness</run_depend>
  <run_depend>fkie_iop_component</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
