<?xml version="1.0"?>
<package>
  <name>iop_client_digital_resource_fkie</name>
  <version>1.0.0</version>
  <description>The client service for IOP DigitalResourceDiscovery service, which implements also the Slave interface</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://gitlab.fkie.fraunhofer.de/jaus/iop_sensing_clients.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iop_digital_resource_discovery_fkie</build_depend>
  <build_depend>iop_msgs_fkie</build_depend>
  <build_depend>iop_ocu_slavelib_fkie</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>iop_digital_resource_discovery_fkie</run_depend>
  <run_depend>iop_msgs_fkie</run_depend>
  <run_depend>iop_ocu_slavelib_fkie</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>
 
</package>