<?xml version="1.0"?>
<package>
  <name>iop_handoff_fkie</name>
  <version>1.0.0</version>
  <description>HandoffController and EnhancedAccessControl service for
    a controlled change the access control from one OCU to another. </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_accesscontrol_fkie</build_depend>
  <build_depend>iop_msgs_fkie</build_depend>
  <build_depend>iop_ocu_slavelib_fkie</build_depend>
  <run_depend>iop_accesscontrol_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>iop_msgs_fkie</run_depend>
  <run_depend>iop_ocu_slavelib_fkie</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
