<?xml version="1.0"?>
<package>
  <name>iop_health_monitor_fkie</name>
  <version>1.2.0</version>
  <description>The bridge library of IOP HealthMonitor service.
    This service can be included into other components.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_accesscontrol_1_0_fkie</build_depend>
  <build_depend>iop_builder_fkie</build_depend>
  <build_depend>iop_component_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>iop_accesscontrol_1_0_fkie</run_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>
</package>