<?xml version="1.0"?>
<package>
  <name>iop_platform_manager_fkie</name>
  <version>1.0.0</version>
  <description>The meta package which combines services to create a main platform with discovering services.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>iop_digital_resource_discovery_fkie</run_depend>
  <run_depend>iop_discovery_1_0_fkie</run_depend>
  <run_depend>iop_health_monitor_fkie</run_depend>
  <run_depend>iop_liveness_1_0_fkie</run_depend>
  <run_depend>iop_management_1_0_fkie</run_depend>
  <run_depend>iop_platform_mode_fkie</run_depend>
  <run_depend>iop_platform_state_fkie</run_depend>
</package>