<?xml version="1.0"?>
<package>
  <name>iop_unsolicited_heartbeat_fkie</name>
  <version>0.1.0</version>
  <description>Automatically generate periodic Report Heartbeat Pulse messages.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_platform</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_liveness_fkie</build_depend>
  <run_depend>iop_liveness_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
